syntax = "proto3";

package com.grandcloud.mammut;

import "google/protobuf/empty.proto";

message RegisterNameRequest {
  string name = 1;
  bytes public_key = 2;
}

message SendMessageRequest {
  string name = 1;
  string msg = 2;
  bytes signature = 3;
}

message PublicKeyRequest {
  string name = 1;
}

message PublicKeyResponse {
  string name = 1;
  bytes public_key = 2;
}

message FollowRequest {
  string name = 1;
}

message FollowResponse {
  string name = 1;
  string msg = 2;
  bytes signature = 3; 
}

service Mammut {
  rpc GetPublicKey(PublicKeyRequest) returns (PublicKeyResponse);
  rpc RegisterName(RegisterNameRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc Follow(FollowRequest) returns (stream FollowResponse);
}
